syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeyManagerGRPC";
option objc_class_prefix = "HLW";

package br.com.zup;

service KeyManagerGRPCService {
  rpc send (KeyManagerGRPCRequest) returns (KeyManagerGRPCReply) {}

  rpc registraChavePix(RegistraChavePixRequest) returns (RegistraChavePixResponse){}
}

service KeyManagerRemoveGRPCService{
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse){}
}

enum TipoChave{
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta{
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistraChavePixRequest{
  string clientId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message RegistraChavePixResponse{
  string clientId = 1;
  string pixKey = 2;
}

message KeyManagerGRPCRequest {
  string name = 1;
}

message RemoveChavePixRequest{
  string clientId = 1;
  string pixKey = 2;
}

message RemoveChavePixResponse{
  string clientId = 1;
  string pixKey = 2;
}

message KeyManagerGRPCReply {
  string message = 1;
}